style: fix overflow

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -24,3 +24,7 @@ html,
 body {
   height: 100%;
 }
+
+body {
+  @apply lg:py-[15vh];
+}
